Made layout for mobile and fixed some spacing and looks issues on desktop

--- a/scss/inbox.scss
+++ b/scss/inbox.scss
@@ -12,17 +12,21 @@
     text-rendering: optimizeLegibility;
 
      #content-body {
-        padding-right: 1rem;
-        padding-left: 1rem;
         // font-size: 1.3125em;
         // letter-spacing: 0.01rem;
         // line-height: 1.5;
-         section, p, ul, hr, h1, h2, h3, h4, h5, h6 {
+        > section, > p, > ul, > hr, > h1, > h2, > h3, > h4, > h5, > h6 {
             @extend .centered-block;
             li {
                 margin-left: 1.2rem;
             }
          }
+     }
+
+     #content-body-text-test {
+        @include grid-row();
+        max-width: $content-width;
+        padding: 1rem;
      }
 
 }
